<resources>
    <string name="app_name">Finance Assistant</string>
    <string name="toolbar_graphic">График платежей</string>
    <string name="toolbar_payment">Платеж</string>
    <string name="toolbar_settings">Настройки</string>

  <string name="toolbar_exchange">Синхронизация</string>

    <string name="toolbar_subtitle_new">Новый</string>

  <string name="task_finish">Задача закончена</string>
    <string name="search_hint">Поиск</string>
    <string name="microphone">Микрофон</string>
    <string name="edit">Правка</string>
    <string name="remove">Удалить</string>
    <string name="sort_ab">Сортировка</string>

    <string name="action_add">Добавить</string>
    <string name="action_add_all">Добавить платежи до тек. даты</string>
    <string name="action_delete_all">Удалить все</string>
    <string name="action_delete_all_payments">Удалить все платежи</string>

    <string name="action_show_closed">Показать закрытые</string>
    <string name="action_hide_closed">Скрыть закрытые</string>

    <string name="dialog_delete">Удалить</string>
    <string name="dialog_delete_all">Удалить все элементы?</string>
    <string name="dialog_button_yes">Да</string>
    <string name="dialog_button_cancel">Отмена</string>



  <string name="action_credit_diagram">Диаграмма</string>

  <string name="action_credit_delete">Удалить кредит</string>
  <string name="action_credit_addpayment">Ввести платеж по кредиту</string>
    <string name="action_credit_editcredit">Изменить параметры кредита</string>
    <string name="action_payment_delete">Удалить платеж</string>

    <string name="item_title_date">Дата</string>
    <string name="item_title_summa">Сумма</string>
    <string name="title_activity_flat">Квартиры</string>
    <string name="title_activity_credit">Кредиты</string>
    <string name="title_activity_task">Задачи</string>

    <string name="title_flat_name">Наименование</string>
    <string name="title_flat_adres">Адрес</string>
    <string name="title_flat_parameters">Параметры</string>
    <string name="title_flat_counter">Вводить показания счетчиков</string>
    <string name="title_flat_arenda">Платежи по аренде</string>
    <string name="title_flat_pay">Автозадачи по квартплате</string>
    <string name="title_flat_day_beg">День c</string>
    <string name="title_flat_lic">Лицевой счет</string>
    <string name="title_flat_summa">Сумма</string>

    <string name="title_flat_finish">Объект выбыл</string>
    <string name="title_flat_actual">Актуальность</string>

    <string name="title_flat_day_end">по</string>
    <string name="toolbar_flat">Квартира</string>
    <string name="toolbar_task">Задача</string>
    <string name="toolbar_credit">Кредит</string>
  <string name="toolbar_diagram">Диаграмма</string>
    <string name="title_flat_type">Тип объекта</string>


    <string name="title_flat_day_arenda">С </string>
    <string name="title_flat_day_arenda2">числа месяца</string>
    <string name="title_flat_summa_arenda">Сумма аренды</string>
    <string name="title_flat_day_arenda_hint">10</string>

  <string name="action_flat_pay">Платеж</string>
    <string name="action_flat_paylist">Список платежей</string>


    <string name="graphic_summa_pay">Сумма платежа</string>
    <string name="graphic_date_beg">Дата начала</string>
    <string name="graphic_exec">Расчет</string>

  <string name="action_payment_add">Внести платеж</string>
    <string name="action_graphic_add">Добавить строку в график платежей</string>
    <string name="action_payment_deleteAll">Удалить все платежи по кредиту</string>


    <string name="credit_item_name">Наименование</string>
    <string name="credit_item_summa">Сумма кредита</string>
    <string name="credit_item_summa_pay">Сумма платежа</string>
    <string name="credit_item_procent">Процент, %</string>
    <string name="credit_item_perion">Срок, мес.</string>
    <string name="credit_item_finish">Закрыт</string>
    <string name="credit_item_date">Дата</string>

  <string name="credit_item_error_summa">Ошибка: Не задана сумма кредита!</string>
    <string name="credit_item_error_summa_pay">Ошибка: Не задана сумма платежа!</string>
    <string name="credit_item_error_procent">Ошибка: Не задан процент кредита!</string>
    <string name="credit_item_error_period">Ошибка: Не задан период кредита!</string>

    <string name="flat_payment_operation">Операция</string>


    <string name="credit_payment_date">Дата платежа</string>
    <string name="credit_payment_summa">Сумма платежа</string>
    <string name="credit_payment_summa_credit">в т.ч. кредит</string>
    <string name="credit_payment_summa_procent">процент</string>
    <string name="credit_payment_summa_addon">Досрочное погашение</string>
    <string name="credit_payment_summa_plus">Прoчие доходы</string>
    <string name="credit_payment_summa_minus">Прочие расходы</string>
    <string name="credit_payment_comment">Комментарий</string>

    <string name="graphic_alert_title">График платежей</string>
    <string name="task_alert_title">Задачи</string>

    <string name="settings_show_close_credit">Показывать закрытые кредиты</string>
    <string name="settings_show_close_flat">Показывать выбывшие объекты</string>

  <string name="notification_channel_id_default">DefaultNotificationChannelId</string>
  <string name="notification_channel_id_credit">CreditNotificationChannelId</string>
  <string name="notification_channel_id_arenda">ArendaNotificationChannelId</string>
  <string name="notification_channel_id_flat">FlatNotificationChannelId</string>

  <string name="notification_title_default"></string>
  <string name="notification_title_credit">Платеж по кредиту</string>
  <string name="notification_title_arenda">Аренда</string>
  <string name="notification_title_flat">Квартплата</string>
  <string name="notification_title_flat_counter">Показания счетчиков</string>

  <string name="notification_group_key_default">DefaultNotificationGroupKey</string>
  <string name="notification_group_key_credit">CreditNotificationGroupKey</string>
  <string name="notification_group_key_arenda">ArendaNotificationGroupKey</string>
  <string name="notification_group_key_flat">FlatNotificationGroupKey</string>
  <string name="notification_group_key_flat_counter">FlatCounterNotificationGroupKey</string>

  <string-array name="type_credit">
        <item>Квартира</item>
        <item>Автомобиль</item>
        <item>Потребительский</item>
        <item>Страхование</item>
        <item>Паркинг</item>
    </string-array>

  <string name="exchange_action_load_all">Все</string>
  <string name="exchange_action_load_credits">Кредиты</string>
  <string name="exchange_action_load_payments">Платежи</string>
  <string name="exchange_action_load_graphics">Графики платежей</string>
  <string name="exchange_action_load_flats">Квартиры</string>
  <string name="exchange_action_load_flat_payments">Платежи по квартирам</string>
  <string name="exchange_action_load_flat_photo">Фото</string>

</resources>

