<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        android:icon="@drawable/icon_toolbar_search"
        yourapp:showAsAction="always|collapseActionView"
        />
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/icon_toolbar_edit"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_micro"
        android:title="@string/microphone"
        android:icon="@drawable/icon_toolbar_micro"
        yourapp:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/icon_toolbar_plus"
        yourapp:showAsAction="always" />
    <item
        android:id="@+id/action_remove"
        android:title="@string/remove"
        android:icon="@drawable/icon_toolbar_remove"
        yourapp:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_ab"
        android:icon="@drawable/icon_toolbal_sort"
        yourapp:showAsAction="always" />

    <item
        android:id="@+id/action_options_submenu"
        android:title="@string/remove"
        android:icon="@drawable/submenu"
        yourapp:showAsAction="always" >

        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">
            <item
                android:id="@+id/action_option_add"
                android:orderInCategory="100"
                android:title="@string/action_add"
                android:icon="@drawable/plus"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_option_delete_all"
                android:orderInCategory="100"
                android:title="@string/action_delete_all"
                android:icon="@drawable/delete"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_option_show_closed"
                android:orderInCategory="100"
                android:title="@string/action_show_closed"
                android:icon="@drawable/icon_toolbar_visible"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_option_hide_closed"
                android:orderInCategory="100"
                android:title="@string/action_hide_closed"
                android:icon="@drawable/icon_toolbar_invisible"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>