<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.financeassistant.credit.CreditItemActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLabel"
            android:text="@string/credit_item_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="8"
            android:hint="@string/credit_item_name"
            android:text="" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nameMicro"
            android:background="@null"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/micro" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLabel"
            android:layout_gravity="left|center"
            android:text="Тип" />

        <Spinner
            android:id="@+id/spType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            >
        </Spinner>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorLabel"
                android:layout_gravity="left|center"
                android:text="@string/credit_item_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:hint="@string/credit_item_date"
                android:onClick="setDate"
                android:inputType="textPersonName|date" />

                <ImageButton
                    android:id="@+id/btSetDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setDate"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:src="@drawable/calendar" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSumma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorLabel"
                android:text="@string/credit_item_summa" />

            <EditText
                android:id="@+id/etSumma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:hint="@string/credit_item_summa" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLabel"
                android:text="@string/credit_item_procent" />

            <EditText
                android:id="@+id/etProcent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:hint="@string/credit_item_procent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLabel"
                android:layout_marginLeft="5dp"
                android:text="@string/credit_item_perion" />

            <EditText
                android:id="@+id/etPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:hint="@string/credit_item_perion" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSummaPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorLabel"
                android:text="@string/credit_item_summa_pay" />

            <EditText
                android:id="@+id/etSummaPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:hint="@string/credit_item_summa_pay" />

        </LinearLayout>

        <Switch
            android:id="@+id/swFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorLabel"
            android:text="@string/credit_item_finish" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
