<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.financeassistant.task.TaskItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLabel"
                android:focusable="false"
                android:textSize="14sp"
                android:text="@string/credit_item_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLabel"
                android:layout_weight="3"
                android:textSize="16sp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/credit_item_name" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="nameMicro"
                    android:layout_weight="1"
                    android:background="@null"
                    android:layout_margin="5dp"
                    android:src="@drawable/micro" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorLabel"
                    android:layout_gravity="left|center"
                    android:text="@string/credit_payment_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/credit_item_date"
                        android:onClick="setDate"
                        android:inputType="textPersonName|date" />

                    <ImageButton
                        android:id="@+id/btSetDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="setDate"
                        android:layout_margin="5dp"
                        android:background="@null"
                        android:src="@drawable/calendar" />
<!-->
                    <Button
                        android:id="@+id/btSetDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/my_calendar_1"
                        android:layout_weight="1"
                        android:text="..."
                        android:onClick="setDate"
                        android:layout_marginLeft="2dp"
                        android:hint="@string/credit_item_date"
                        />
<-->
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSumma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorLabel"
                    android:text="@string/credit_payment_summa" />

                <EditText
                    android:id="@+id/etSumma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_marginLeft="5dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/credit_payment_summa" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/cbFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_finish" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
